# Open-G-SLAM

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
config/: EvETHZ_DUMMY.yaml
core/: CMakeLists.txt  GlobalConfig.h.in
core/DataLoaders/: BaseLoader.cpp  BaseLoader.h  EurocLoader.cpp  EurocLoader.h  EvETHZ_Loader.cpp  EvETHZ_Loader.h
core/DataLoaders/DataStore/: EventDS.cpp  EventDS.h  IMU_DS.cpp  IMU_DS.h  ImageDS.cpp  ImageDS.h  PoseDS.cpp  PoseDS.h  TabularTextDS.cpp  TabularTextDS.h
core/DataTypes/: Event.cpp  Event.h  EventHook.cpp  EventHook.h  IMU.cpp  IMU.h  IMU_Hook.cpp  IMU_Hook.h  Image.cpp  Image.h  ImageFilter.cpp  ImageFilter.h  ImageHook.cpp  ImageHook.h  Pose.cpp  Pose.h  PoseHook.cpp  PoseHook.h  SharedQueue.cpp  SharedQueue.h
core/FrontEnd/Camera/Models/: GeometricCamera.h  KannalaBrandt8.cpp  KannalaBrandt8.h  Pinhole.cpp  Pinhole.h
core/FrontEnd/Camera/Utils/: TwoViewReconstruction.cpp  TwoViewReconstruction.h
core/Parameters/: ParameterServer.cpp  ParameterServer.h
core/Parameters/Types/: CamParams.cpp  CamParams.h  DS_Params.cpp  DS_Params.h  EventParams.cpp  EventParams.h  Features2D.cpp  Features2D.h  IMU_Params.cpp  IMU_Params.h  SensorConfig.cpp  SensorConfig.h  ViewerParams.cpp  ViewerParams.h
core/Utils/: DataConversion.cpp  DataConversion.h  TabularTextWriter.cpp  TabularTextWriter.h
core/Utils/YamlParser/: YamlParserCV.cpp  YamlParserCV.h
core/Visualization/: Visualization.cpp  Visualization.h
examples/: CMakeLists.txt
examples/Test/: data_loaders  data_loaders.cpp
ros/: CMakeLists.txt  package.xml
ros/core/loaders/: MVSEC_Loader.cpp  MVSEC_Loader.h
ros/examples/: rosbag_loader  rosbag_loader.cpp
